[package]
authors = ["Zhan Poplavskyi <gan.popl@gmail.com>", "Pierre Krieger <pierre.krieger1708@gmail.com>", "Fedor Logachev <not.fl3@gmail.com>", "Constantine Shablya <t3a@protonmail.com>"]
description = "glium_text_rusttype fork of glium_text fork, text drawing with glium and rusttype"
keywords = ["text", "opengl"]
license = "MIT"
name = "glium_text_rusttype_fork"
repository = "https://github.com/NetLagina/glium_text_rusttype"
version = "0.3.7"

[dependencies]
rusttype = "0.9.3"

[dependencies.glium]
default-features = false
version = "0.32.1"

[dev-dependencies]
cgmath = "0.18"

[dev-dependencies.glium]
features = ["glutin"]
version = "0.32.1"
